--- a/itis3135/project/founder.html
+++ b/itis3135/project/founder.html
@@ -7,82 +7,17 @@
   <link rel="stylesheet" href="styles/default.css" />
   <script src="scripts/HTML.Include.min.js" defer></script>
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-  <style>
-    .founder-container {
-      max-width: 900px;
-      margin: 40px auto;
-      background: #fffaf0;
-      border-radius: 12px;
-      padding: 30px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.05);
-    }
-
-    .founder-hero {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-      gap: 30px;
-    }
-
-    .founder-hero img {
-      width: 300px;
-      height: auto;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-
-    .founder-text {
-      max-width: 500px;
-      text-align: left;
-    }
-
-     h2 {
-      font-size: 28px;
-      color: #8b5e3c;
-      margin-bottom: 10px;
-    }
-
-    .founder-text p {
-      font-size: 1.1rem;
-      color: #4a3a2a;
-      line-height: 1.7;
-    }
-
-    @media screen and (max-width: 768px) {
-      .founder-hero {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .founder-text {
-        text-align: center;
-      }
-    }
-  </style>
+  <script src="scripts/load.js" defer></script>
 </head>
-<body>
-  <header>
-    <h1>The Concious Closet</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="submission.html">Submit Ideas</a>
-      <a href="events.html">Events</a>
-      <a href="links.html">Sustainable Brands</a>
-      <a href="info.html">Sustainability Info</a>
-      <a href="why.html">Why Sustainable?</a>
-      <a href="examples.html">Fashion Gallery</a>
-      <a href="what-can-you-do.html">Take Action</a>
-      <a href="founder.html">Founder</a>
-    </nav>
-  </header>
+<body class="fade">
+  <div data-include="components/header.html"></div>
 
   <main>
     <div class="founder-container">
       <div class="founder-hero">
-        <img src="images/holly.JPG" alt="Photo of the Founder" />
+        <img src="images/holly.JPG" alt="Photo of the Founder" class="holly-img" />
         <div class="founder-text">
-          <h2>Holly Needham</h2>
+          <h2 class="founder-h2">Holly Needham</h2>
           <p>
             Holly founded <strong>The Conscious Closet</strong> out of a passion for sustainability and fashion. 
             Witnessing firsthand the environmental toll of fast fashion, 
@@ -102,8 +37,6 @@
     </div>
   </main>
 
-  <footer>
-    <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
-  </footer>
+  <div data-include="components/footer.html"></div>
 </body>
 </html>
