--- a/itis3135/project/project_overview.html
+++ b/itis3135/project/project_overview.html
@@ -10,9 +10,10 @@
 </head> 
 
 <body>
-    <h1>The Conscious Closet - Sustainable Fashion</h1>
-    
+    <h1>The Concious Closet</h1>
+
     <h2>Project Overview</h2>
+
     <p><strong>Application Purpose:</strong> The website will promote sustainable fashion by educating users about eco-friendly choices, providing resources, and encouraging community engagement.</p>
     
     <h2>Intended Users</h2>
