--- a/itis3135/byo_intro.html
+++ b/itis3135/byo_intro.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" href="styles/default.css">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
     <script src="scripts/HTML.Include.min.js" defer></script>
+    <script src="scripts/byo.js" defer></script>
 </head>
 <body>
     <div data-include="components/header.html"></div>
     <h2>Build Your Own Introduction</h2>
     <h3>Time to BYO Intro page, please fill out the form below so we can create your own page.</h3>
     
-    <form id="introForm">
+    <form id="introForm" class="styled-form">
         <label for="name">Name:</label>
         <input type="text" id="name" required>
         <br>
