--- a/itis3135/project/events.html
+++ b/itis3135/project/events.html
@@ -7,22 +7,10 @@
   <link rel="stylesheet" href="styles/default.css" />
   <script src="scripts/HTML.Include.min.js" defer></script>
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  <script src="scripts/load.js" defer></script>
 </head>
-<body>
-  <header>
-    <h1>The Conscious Closet - Sustainable Fashion</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="submission.html">Submit Ideas</a>
-      <a href="events.html">Events</a>
-      <a href="links.html">Sustainable Brands</a>
-      <a href="info.html">Sustainability Info</a>
-      <a href="why.html">Why Sustainable?</a>
-      <a href="examples.html">Fashion Gallery</a>
-      <a href="what-can-you-do.html">Take Action</a>
-      <a href="founder.html">Founder</a>
-    </nav>
-  </header>
+<body class="fade">
+ <div data-include="components/header.html"></div>
 
   <main>
     <section>
@@ -77,10 +65,11 @@
     </section>
   </main>
 
-  <footer>
-    <p>2025 The Conscious Closet | Designed by 
-      <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a>
-    </p>
-  </footer>
+  <div data-include="components/footer.html"></div>
+
+  <script>
+    document. getElementById("validation_link_html"). setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
+    document.getElementById("validation_link_css"). setAttribute ("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+</script>
 </body>
 </html>
