--- a/itis3135/project/index.html
+++ b/itis3135/project/index.html
@@ -7,25 +7,12 @@
   <link rel="stylesheet" href="styles/default.css" />
   <script src="scripts/HTML.Include.min.js" defer></script>
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  <script src="scripts/load.js" defer></script>
 </head>
-<body>
-  <header>
-    <h1>The Conscious Closet - Sustainable Fashion</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="submission.html">Submit Ideas</a>
-      <a href="events.html">Events</a>
-      <a href="links.html">Sustainable Brands</a>
-      <a href="info.html">Sustainability Info</a>
-      <a href="why.html">Why Sustainable?</a>
-      <a href="examples.html">Fashion Gallery</a>
-      <a href="what-can-you-do.html">Take Action</a>
-      <a href="founder.html">Founder</a>
-    </nav>
-  </header>
+<body class="fade">
+  <div data-include="components/header.html"></div>
 
   <main>
-    <!-- Hero Section -->
     <section class="hero">
       <h2>Welcome to The Conscious Closet</h2>
       <p>
@@ -35,7 +22,7 @@
     </section>
 
 
-    <!-- How It Works -->
+    
     <section>
       <h3>How It Works</h3>
       <ol>
@@ -45,7 +32,7 @@
       </ol>
     </section>
 
-    <!-- Testimonials -->
+  
     <section class="testimonials">
       <h3>What Our Community Says</h3>
       <blockquote>
@@ -56,7 +43,7 @@
       </blockquote>
     </section>
 
-    <!-- CTA -->
+
     <section class="cta">
       <h3>Ready to Make a Change?</h3>
       <p>Join our growing community of changemakers. Start today by exploring how your fashion habits can help the planet.</p>
@@ -64,10 +51,6 @@
     </section>
   </main>
 
-  <footer>
-    <p>2025 The Conscious Closet | Designed by 
-      <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a>
-    </p>
-  </footer>
+  <div data-include="components/footer.html"></div>
 </body>
 </html>
