--- a/itis3135/project/links.html
+++ b/itis3135/project/links.html
@@ -7,75 +7,17 @@
   <link rel="stylesheet" href="styles/default.css" />
   <script src="scripts/HTML.Include.min.js" defer></script>
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-  <style>
-    .links-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-
-    .link-card {
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      overflow: hidden;
-      text-align: center;
-      background-color: #f5f5f5;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .link-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-    }
-
-    .link-card img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-    }
-
-    .link-card a {
-      display: block;
-      padding: 10px;
-      color: #2e1706;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .link-card a:hover {
-      color: #1abc9c;
-    }
-
-    .link-heading {
-      grid-column: 1 / -1;
-      text-align: center;
-      margin-bottom: 10px;
-    }
-
-    h1, h2 {
-      text-align: center;
-    }
-  </style>
+  <script src="scripts/links.js" defer></script>
+  <script src="scripts/load.js" defer></script>
 </head>
-<body>
-  <header>
-    <h1>The Conscious Closet - Sustainable Fashion</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="submission.html">Submit Ideas</a>
-      <a href="events.html">Events</a>
-      <a href="links.html">Sustainable Brands</a>
-      <a href="info.html">Sustainability Info</a>
-      <a href="why.html">Why Sustainable?</a>
-      <a href="examples.html">Fashion Gallery</a>
-      <a href="what-can-you-do.html">Take Action</a>
-      <a href="founder.html">Founder</a>
-    </nav>
-  </header>
+<body class="fade">
+  <div data-include="components/header.html"></div>
 
   <main>
-    <section class="links-grid">
+
+    <section class="links-grids">
+      <input type="text" id="brandSearch" class="brand-search" placeholder="Search the brands below..." />
+    <br>
       <h2 class="link-heading">Explore These Eco-Friendly Brands</h2>
       <div class="link-card">
         <a href="https://www.patagonia.com/" target="_blank">
@@ -113,9 +55,6 @@
       </div>
     </section>
 
-    <input type="text" id="brandSearch" placeholder="Search the brands up above..." />
-    <br>
-
     <section class="cta">
       <h3>Know a Brand We Should Feature?</h3>
       <p>We’d love to hear about your favorite sustainable fashion sources!</p>
@@ -123,19 +62,7 @@
     </section>
   </main>
 
-  <footer>
-    <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
-  </footer>
-
-  <script>
-    const input = document.getElementById('brandSearch');
-    input.addEventListener('input', () => {
-      const filter = input.value.toLowerCase();
-      document.querySelectorAll('.link-card').forEach((card) => {
-        card.style.display = card.textContent.toLowerCase().includes(filter) ? '' : 'none';
-      });
-    });
-    </script>
+  <div data-include="components/footer.html"></div>
 
 </body>
 </html>
