--- a/itis3135/project/why.html
+++ b/itis3135/project/why.html
@@ -7,22 +7,10 @@
   <link rel="stylesheet" href="styles/default.css" />
   <script src="scripts/HTML.Include.min.js" defer></script>
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  <script src="scripts/load.js" defer></script>
 </head>
-<body>
-  <header>
-    <h1>The Conscious Closet - Sustainable Fashion</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="submission.html">Submit Ideas</a>
-      <a href="events.html">Events</a>
-      <a href="links.html">Sustainable Brands</a>
-      <a href="info.html">Sustainability Info</a>
-      <a href="why.html">Why Sustainable?</a>
-      <a href="examples.html">Fashion Gallery</a>
-      <a href="what-can-you-do.html">Take Action</a>
-      <a href="founder.html">Founder</a>
-    </nav>
-  </header>
+<body class="fade">
+  <div data-include="components/header.html"></div>
 
   <main>
     <section>
@@ -71,7 +59,7 @@
 
     <section>
       <h2>Did You Know?</h2>
-      <ul>
+        <ul>
         <li>It takes 2,700 liters of water to make one cotton shirt — enough for one person to drink for 2.5 years.</li>
         <li>The fashion industry is responsible for 10% of global carbon emissions.</li>
         <li>Clothing production has roughly doubled since 2000, while garment use lifespan has decreased.</li>
@@ -91,8 +79,6 @@
     </section>
   </main>
 
-  <footer>
-    <p>2025 The Conscious Closet | Designed by <a href="../lutabingwagroupinc.com/"><strong>Lutabingwa Group ©2025</strong></a></p>
-  </footer>
+  <div data-include="components/footer.html"></div>
 </body>
 </html>
