--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <li><a href="https://www.linkedin.com/in/jonathan-lutabingwa/" target="_blank">LinkedIn</a></li>
         <li><a href="https://github.com/jtlutabingwa" target="_blank">GitHub</a></li>
         <li><a href="itis3135/">ITIS3135 Course Website</a></li>
+         <li>
+            <a href="assets/Jonathan Lutabingwa - Resume.pdf" target="_blank" rel="noopener" meta name="robots" content="noindex">View Resume</a> |
+            <a href="assets/Jonathan Lutabingwa - Resume.pdf" download="Jonathan_Lutabingwa_Resume.pdf" target="_blank" meta name="robots" content="noindex">Download</a>
+        </li>
       </ul>
     </nav>
   </header>
